--- a/style.css
+++ b/style.css
@@ -1,9 +1,11 @@
 html {
     font-size: 10px;
+    background-color: blue;
 }
 
 body {
     font-family: 'Courgette', cursive;
+    background-color: blue;
 }
 h1 {
     text-align: center;
