--- a/style.css
+++ b/style.css
@@ -6,9 +6,15 @@ html {
 body {
     font-family: 'Courgette', cursive;
    }
-   
+
 h1 {
     text-align: center;
     padding: 2rem;
     font-size: 3rem;
+}
+
+h2 {
+    text-align: center;
+    font-size: 2rem;
+    font-family: Arial, Helvetica, sans-serif;
 }
