--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 html {
     font-size: 10px;
-    background-color: blue;
+   
 }
 
 body {
@@ -17,4 +17,16 @@ h2 {
     text-align: center;
     font-size: 2rem;
     font-family: Arial, Helvetica, sans-serif;
+}
+
+.heroes{
+    display: flex;
+    justify-content: space-around;
+}
+h3 {
+    font-size: 2rem;
+}
+p,ul{
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 1.6rem;
 }
